[tool.poetry]
name = "sherloc"
version = "0.1.0"
description = "Systematic Heuristics for Error Recognition and Localisation in OpenCitations data"
authors = ["eliarizzetto <elia.rizzetto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.4"
sparqlwrapper = "^2.0.0"
xmltodict = "^0.14.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
